UX: transition transform buggy on iOS

--- a/mobile/mobile.scss
+++ b/mobile/mobile.scss
@@ -5,19 +5,19 @@
   width: 580px;
   z-index: z("header") + 1;
   position: fixed;
-  transform: translate(-50%, -50%) scale(0.9);
+  transform: translate(-50%, -50%);
   z-index: 1000;
   color: $primary;
   background: $secondary center center !important; // removes user-card backgrounds for now
   min-height: 175px;
-  transition: opacity 0.2s, transform 0.2s;
+  transition: opacity 0.2s;
   opacity: 0;
 
   &.show {
     opacity: 1;
     top: 50% !important; // js styles
     left: 50% !important; // js styles
-    transform: translate(-50%, -50%) scale(1);
+    transform: translate(-50%, -50%);
     max-width: calc(100% - 20px); // body width - main-outlet padding
 
     &:before {
